wip(mcp): refactoring mcp according to spring ai - 1